--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Anna-Lena kodar</title>
+    <link href="./main.css" rel="stylesheet" type="text/css"
   </head>
+
   <body>
     <h1>Hjälp mig välja mellan... </h1>
-    <div>
-      <div>
+    <div class="inputSection">
+      <div class="inputs">
         <input placeholder="Något"</input>
       </div>
-      <button>Lägg till</button>
+      <button class="addOption">Lägg till</button>
     </div>
     <button>Wohoo!</button>
   </body>
